# attendance_app_865

./: .gitignore  Cargo.toml  index.css  index.html
src/: counter.rs  gsheets.rs  lib.rs  main.rs  name_input.rs
