[package]
name = "attendance_app_865"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
google-sheets4 = "4.0.1"
leptos = "0.0.19"
serde = "1.0.152"
serde_json = "1.0.91"
# serde = "1.0.148"
# tokio = "1.22.0"
